--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \\\"Error: no test specified\\\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "Nikita Ganin",
   "license": "ISC",
@@ -20,6 +20,10 @@
   },
   "devDependencies": {
     "eslint": "^7.31.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
